fix(frontend): add margin to logbook and kanban overlapping elements when in fullscreen
PR #6472

--- a/frontend_app_kanban/src/css/index.styl
+++ b/frontend_app_kanban/src/css/index.styl
@@ -202,6 +202,16 @@ cardWidth = 280px
     & > *
       margin auto
 
+.fullscreen
+  // INFO - ML - 2024-04-26 - 40px is the size of the fullscreen button
+  & .kanban__contentpage__wrapper
+    &__options
+      position relative
+      top 10px
+      margin-inline-end "calc(40px + %s)" % standardSpacing
+    &__board
+      margin-inline-end "calc(40px + %s)" % standardSpacing
+
 [dir=ltr] .kanban
   &__contentpage
     &__wrapper
